Fix scrollbars, overflowing image

--- a/public/assets/styles/components/modal/post/create-post.less
+++ b/public/assets/styles/components/modal/post/create-post.less
@@ -103,7 +103,7 @@ div#create-post-modal {
     div#preview-content {
       box-sizing: border-box;
       max-height: 300px;
-      overflow-y: scroll;
+      overflow-y: auto;
       padding: 0 15px;
       width: 100%;
     }
