--- a/public/assets/styles/components/poll-answer-editor.less
+++ b/public/assets/styles/components/poll-answer-editor.less
@@ -32,7 +32,7 @@ div.poll-answer-editor {
 
     ul {
       max-height: 150px;
-      overflow-y: scroll;
+      overflow-y: auto;
       width: 100%;
 
       li {
