--- a/public/assets/styles/core.less
+++ b/public/assets/styles/core.less
@@ -5,6 +5,7 @@
 
 .view {
   height: @u-vh-no-hero;
+  overflow: hidden;
   position: relative;
 }
 
