--- a/public/assets/styles/pages/auth.less
+++ b/public/assets/styles/pages/auth.less
@@ -1,7 +1,7 @@
 .full-page.dark-bg {
   background: @primary-light;
   background: radial-gradient(@primary-light, @primary-dark);
-  overflow-y: scroll;
+  overflow-y: auto;
   text-align: center;
 
   > .logo {
