--- a/public/assets/styles/pages/post.less
+++ b/public/assets/styles/pages/post.less
@@ -213,7 +213,7 @@
 
   .post__content-wrapper {
     flex: 1;
-    overflow-y: scroll;
+    overflow-y: auto;
 
     .list-item__title { line-height: 1.5 !important; }
 
